# test2

./: CMakeDoxygen.txt  CMakeLists.txt  CMakeOptions.txt  Doxyfile  LICENSE  README.md  header.html
Applications/: CMakeLists.txt
Applications/Drahtgleichung/: CMakeLists.txt  drahtgleichung.cpp
LinAlg/include/: GaussSeidel.h  GaussSeidelTriScalar.h  Iterative.h  Jacobi.h  JacobiScalar.h  JacobiTriScalar.h  TriDiag.h  TriDiagArray.h  TriDiagScalar.h  TriLU.h  TriLUScalar.h
LinAlg/src/: GaussSeidel.cpp  GaussSeidelTriScalar.cpp  Iterative.cpp  Jacobi.cpp  JacobiTriScalar.cpp  TriDiag.cpp  TriDiagArray.cpp  TriDiagScalar.cpp  TriLU.cpp  TriLUScalar.cpp
Vis/include/: visUtils.h
Vis/paraview/: firstPipe.pvsm  secondPipe.pvsm
Vis/src/: visUtils.cpp
examples/: CMakeLists.txt
examples/IterativLGS/: CMakeLists.txt  gaussSeidelTest.cpp  jacobiTest.cpp  matrix1.txt  matrix2.txt  matrix3.txt  triGaussSeidelTest.cpp  triJacobiTest.cpp
examples/TriLU/: CMakeLists.txt  luTest.cpp  triTest.cpp
kernel/include/: Wire1D.h  utils.h
kernel/src/: Wire1D.cpp  utils.cpp
